Update of Readme and HTML Page summary of Tech Radar

--- a/index.html
+++ b/index.html
@@ -42,16 +42,16 @@
 <tr>
 <td>
 
-<h3>What is this?</h3>
+<h3>Purpose - Why We Create the Tech-Radar?</h3>
 
 <p>
-The Zalando Tech Radar is a tool to inspire and support teams to pick the best technologies for new projects; it provides a platform to share knowledge and experience in technologies, to reflect on technology decisions and continuously evolve our technology landscape. Based on ideas of ThoughtWorks, our Tech Radar sets out the changes in technologies that are interesting in software development; changes that we think our engineering teams should pay attention to and consider using in their projects.
+The Zalando Tech Radar is a tool to inspire and support teams to pick the best technologies for new projects; it provides a platform to share knowledge and experience in technologies, to reflect on technology decisions and continuously evolve our technology landscape. Based on ideas of <a href="https://www.thoughtworks.com/radar">ThoughtWorks</a>, our Tech Radar sets out the changes in technologies that are interesting in software development; changes that we think our engineering teams should pay attention to and consider using in their projects.
 </p>
 
-<h3>How does it work?</h3>
+<h3>Scope - What Is the Tech-Radar?</h3>
 
 <p>
-The Zalando Tech Radar is a list of technologies, frameworks, tools and methods, complemented by an assessment result, called ring assignment; we use 4 rings:
+The Zalando Tech Radar is a list of technologies, frameworks, tools and methods, complemented by an assessment result, called ring assignment; we use 4 rings with a slightly adapted semantics to fit our purpose:
 <ul>
 <li><b>Adopt</b> &mdash; Technologies we have high confidence to serve our purpose, also in large scale. Technologies with an usage culture in our Zalando production environment, low risk and recommend to be widely used.</li>
 <li><b>Trial</b> &mdash; Technologies that we have seen work with success in project work to solve a real problem; here we have first serious usage experience that confirm benefits and can uncover limitations. Trial technologies are slightly more risky; some engineers in our organization have gone this path and will share knowledge and experiences.</li>
@@ -60,17 +60,21 @@ The Zalando Tech Radar is a list of technologies, frameworks, tools and methods,
 </ul>
 </p>
 
+<p>
+The Tech Radar is maintained by the <b>Zalando Technologist Guild</b> &mdash; an open group of ca. 25 Zalando senior technologists committed to devote time to the Tech Radar purpose. The guild self organises to maintain the Tech-Radar documents, including the <i>quarterly Zalando Tech-Radar release</i> published here. The ring assignments result from average vote of its members &mdash; of course, based on preliminary discussions with the target to achieve high consensus. 
+</p>
+
 </td><td>
 
-<h3>Inside Zalando</h3>
+<h3>Internals - How Does It Work?</h3>
+
+<p>The <a href="https://techwiki.zalando.net/display/GUL/Technologists+Guild">Technology Guild [internal link]</a> maintains the Tech Radar and Compendium, provides a forum for conversations about technologies, shares knowledge on technologies and support the engineering teams with expert knowledge and peer review feedback on their technology selections. Guild members meet monthly to discuss the updates of the Tech Radar assessments, and upcoming and ongoing issues around the technologies and architectural decisions.
+</p>
 
 <p>Together with the Tech Radar we also maintain the <a href="https://tech-radar-compendium.stups.zalan.do/index.html">Tech Radar Compendium [internal link]</a> &mdash; a collection of summaries of listed technologies, i.e. few sentence descriptions of what, why and risks of the technology supplemented with information which teams used it for what kind of problem. It continuously grows with any Tech Radar changes and hopefully evolves fast as a valuable place for us to share information and get teams connected.
 </p>
 
-<p>The <a href="https://techwiki.zalando.net/display/GUL/Technologists+Guild">Technology Guild [internal link]</a> is an open group of Zalando senior technologists committed to devote time to the Tech Radar purpose. The guild maintains the Tech Radar and Compendium, provides a forum for conversations about technologies, shares knowledge on technologies and support the engineering teams with expert knowledge and peer review feedback on their technology selections. Guild members meet monthly to discuss the updates of the Tech Radar assessments, and upcoming and ongoing issues around the technologies and architectural decisions. 
-</p>
-
-<p>The <a href="https://docs.google.com/document/d/1XOqxifpLGq6M64q_bBRPgOaK5itfahdZiVLApQpNNV0">Zalando Tech Radar Principles [internal link]</a>, of course, will not work without Zalando engineering team contributions; so our Technology Rules of Play include obligations for the engineering teams: teams must use the Tech Radar as one input source for their technology decisions. Teams are encouraged to challenge the Tech Radar and provide feedback to the Technologist Guild. Depending on the current assessment status of the technology candidate, teams should align with their delivery leads, inform or ask the Technologist Guild for peer review feedback on the purpose and risks and share their knowledge and experience with other teams and the Guild.
+<p>The <a href="https://docs.google.com/document/d/1XOqxifpLGq6M64q_bBRPgOaK5itfahdZiVLApQpNNV0">Zalando Tech Radar Principles [internal link]</a>, of course, will not work without Zalando engineering team contributions; so our <i>Technology Rules of Play</i> include obligations for the engineering teams: teams must use the Tech Radar as one input source for their technology decisions. Teams are encouraged to challenge the Tech Radar and provide feedback to the Technologist Guild. Depending on the current assessment status of the technology candidate, teams should align with their delivery leads, inform or ask the Technologist Guild for peer review feedback on the purpose and risks and share their knowledge and experience with other teams and the Guild.
 </p>
 
 </td></tr>
