minor editorial update of index.html

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ The Zalando Tech Radar is a list of technologies, frameworks, tools and methods,
 </p>
 
 <p>
-The Tech Radar is maintained by the <b>Zalando Technologist Guild</b> &mdash; an open group of ca. 25 Zalando senior technologists committed to devote time to the Tech Radar purpose. The guild self organises to maintain the Tech-Radar documents, including the <i>quarterly Zalando Tech-Radar release</i> published here. The ring assignments result from average vote of its members &mdash; of course, based on preliminary discussions with the target to achieve high consensus. 
+The Tech Radar is maintained by the <b>Zalando Technologist Guild</b> &mdash; an open group of +25 Zalando senior technologists committed to devote time to the Tech Radar purpose. The guild self organises to maintain the Tech-Radar documents, including the <i>quarterly Zalando Tech-Radar release</i> published here. The ring assignments result from average vote of its members &mdash; of course, based on preliminary discussions with the target to achieve high consensus. 
 </p>
 
 </td><td>
