small typographical tweaks

--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
 <tr>
 <td>
 
-<h3>Purpose - Why We Create the Tech-Radar?</h3>
+<h3>Purpose &mdash; Why Do We Create a Tech Radar?</h3>
 
 <p>
 The Zalando Tech Radar is a tool to inspire and support teams to pick the best technologies for new projects; it provides a platform to share knowledge and experience in technologies, to reflect on technology decisions and continuously evolve our technology landscape. Based on ideas of <a href="https://www.thoughtworks.com/radar">ThoughtWorks</a>, our Tech Radar sets out the changes in technologies that are interesting in software development; changes that we think our engineering teams should pay attention to and consider using in their projects.
 </p>
 
-<h3>Scope - What Is the Tech-Radar?</h3>
+<h3>Scope &mdash; What Is the Tech Radar?</h3>
 
 <p>
 The Zalando Tech Radar is a list of technologies, frameworks, tools and methods, complemented by an assessment result, called ring assignment; we use 4 rings with a slightly adapted semantics to fit our purpose:
@@ -66,7 +66,7 @@ The Tech Radar is maintained by the <b>Zalando Technologist Guild</b> &mdash; an
 
 </td><td>
 
-<h3>Internals - How Does It Work?</h3>
+<h3>Internals &mdash; How Does It Work?</h3>
 
 <p>The <a href="https://techwiki.zalando.net/display/GUL/Technologists+Guild">Technology Guild [internal link]</a> maintains the Tech Radar and Compendium, provides a forum for conversations about technologies, shares knowledge on technologies and support the engineering teams with expert knowledge and peer review feedback on their technology selections. Guild members meet monthly to discuss the updates of the Tech Radar assessments, and upcoming and ongoing issues around the technologies and architectural decisions.
 </p>
