#3 add favicon.io

--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <html>
 <head>
-<meta http-equiv="Content-type" content="text/html; charset=utf-8">  
+<meta http-equiv="Content-type" content="text/html; charset=utf-8">
 <title>Zalando Tech Radar</title>
+<link rel="icon" href="favicon.ico" type="image/x-icon"/>
+<link rel="shortcut icon" href="favicon.ico" type="image/x-icon"/>
 
 <script type="text/javascript" charset="utf-8" src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
 <script type="text/javascript" charset="utf-8" src="lib/protovis-3.2/protovis-d3.2.js"></script>
@@ -10,7 +12,7 @@
 <script type="text/javascript" charset="utf-8" src="radar_data.js"></script>
 <script type="text/javascript" charset="utf-8" src="radar.js"></script>
 
-<style type="text/css">  
+<style type="text/css">
   body {
     font-family: 'Source Sans Pro', arial, helvetica, sans-serif;
     padding-bottom: 50px;
@@ -61,7 +63,7 @@ The Zalando Tech Radar is a list of technologies, frameworks, tools and methods,
 </p>
 
 <p>
-The Tech Radar is maintained by the <b>Zalando Technologist Guild</b> &mdash; an open group of +25 Zalando senior technologists committed to devote time to the Tech Radar purpose. The guild self organises to maintain the Tech-Radar documents, including the <i>quarterly Zalando Tech-Radar release</i> published here. The ring assignments result from average vote of its members &mdash; of course, based on preliminary discussions with the target to achieve high consensus. 
+The Tech Radar is maintained by the <b>Zalando Technologist Guild</b> &mdash; an open group of +25 Zalando senior technologists committed to devote time to the Tech Radar purpose. The guild self organises to maintain the Tech-Radar documents, including the <i>quarterly Zalando Tech-Radar release</i> published here. The ring assignments result from average vote of its members &mdash; of course, based on preliminary discussions with the target to achieve high consensus.
 </p>
 
 </td><td>
