--- a/index.html
+++ b/index.html
@@ -82,5 +82,16 @@ The Tech Radar is maintained by the <b>Zalando Technologist Guild</b> &mdash; an
 </td></tr>
 </table>
 
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-105375141-2', 'auto');
+  ga('send', 'pageview');
+
+</script>
+
 </body>
 </html>
