--- a/public/financials/index.html
+++ b/public/financials/index.html
@@ -2,7 +2,7 @@
   <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8">
     <title>Procore Tech Radar</title>
-    <link rel="shortcut icon" href="favicon.ico">
+    <link rel="shortcut icon" href="../favicon.ico">
     <link rel="stylesheet" href="../radar.css">
   </head>
   <body>
