--- a/public/core-components/index.html
+++ b/public/core-components/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8">
-    <title>Procore Tech Radar</title>
+    <title>CORE Components Radar</title>
     <link rel="shortcut icon" href="favicon.ico">
     <link rel="stylesheet" href="../radar.css">
   </head>
@@ -15,10 +15,10 @@
             The Procore Tech Radar is a list of technologies, complemented by an assessment result, called <em>ring assignment</em>. We use four rings with the following semantics:
           </p>
           <ul>
-            <li><strong>ADOPT</strong> &mdash; Technologies we have high confidence in to serve our purpose, also in large scale. Technologies with a usage culture in our Procore production environment, low risk and recommended to be widely used.</li>
-            <li><strong>TRIAL</strong> &mdash; Technologies that we have seen work with success in project work to solve a real problem; first serious usage experience that confirm benefits and can uncover limitations. TRIAL technologies are slightly more risky; some engineers in our organization walked this path and will share knowledge and experiences.</li>
-            <li><strong>ASSESS</strong> &mdash; Technologies that are promising and have clear potential value-add for us; technologies worth to invest some research and prototyping efforts in to see if it has impact. ASSESS technologies have higher risks; they are often brand new and highly unproven in our organisation. You will find some engineers that have knowledge in the technology and promote it, you may even find teams that have started a prototyping effort.</li>
-            <li><strong>HOLD</strong> &mdash; Technologies not recommended to be used for new projects. Technologies that we think are not (yet) worth to (further) invest in, or have been obsolesced by better choices. HOLD technologies should not be used for new projects, but usually can be continued for existing projects.</li>
+            <li><strong>STABLE</strong> &mdash; Technologies we have high confidence in to serve our purpose, also in large scale. Technologies with a usage culture in our Procore production environment, low risk and recommended to be widely used.</li>
+            <li><strong>BETA</strong> &mdash; Technologies that we have seen work with success in project work to solve a real problem; first serious usage experience that confirm benefits and can uncover limitations. TRIAL technologies are slightly more risky; some engineers in our organization walked this path and will share knowledge and experiences.</li>
+            <li><strong>ALPHA</strong> &mdash; Technologies that are promising and have clear potential value-add for us; technologies worth to invest some research and prototyping efforts in to see if it has impact. ASSESS technologies have higher risks; they are often brand new and highly unproven in our organisation. You will find some engineers that have knowledge in the technology and promote it, you may even find teams that have started a prototyping effort.</li>
+            <li><strong>ABANDONED</strong> &mdash; Technologies not recommended to be used for new projects. Technologies that we think are not (yet) worth to (further) invest in, or have been obsolesced by better choices. HOLD technologies should not be used for new projects, but usually can be continued for existing projects.</li>
           </ul>
         </td>
         <td>
