--- a/public/index.html
+++ b/public/index.html
@@ -7,5 +7,6 @@
   </head>
   <body>
     <a href="financials">Construction Financials Radar</a>
+    <a href="core-components">CORE Components Radar</a>
   </body>
 </html>
