--- a/public/index.html
+++ b/public/index.html
@@ -1,57 +1,57 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <meta charset="utf-8">
-    <title>neofonie tech radar</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="preload" href="css/radar.css" as="style">
-    <link rel="preload" href="css/dark.css" as="style">
-    <link rel="preload" href="css/fonts/exo-webfont/Exo-Medium.woff2" as="font">
-    <link rel="preload" href="js/radar.js" as="script">
-    <link rel="stylesheet" href="css/radar.css">
+  <meta charset="utf-8">
+  <title>neofonie tech radar</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="preload" href="css/app.css" as="style">
+  <link rel="preload" href="css/dark.css" as="style">
+  <link rel="preload" href="css/fonts/exo-webfont/Exo-Medium.woff2" as="font">
+  <link rel="preload" href="js/radar.js" as="script">
+  <link rel="stylesheet" href="css/app.css">
 </head>
 <body class="loading">
-  <header class="header">
-      <div class="company">
-          <a href="https://neofonie.de" target="_blank">neofonie<span class="claim">tech-radar</span></a>
-      </div>
-  </header>
-  <main class="content"></main>
-  <footer class="footer">
-    <i>neofonie</i> 2019
-  </footer>
+<header class="header">
+  <div class="company">
+    <a href="https://neofonie.de" target="_blank">neofonie<span class="claim">tech-radar</span></a>
+  </div>
+</header>
+<main class="content"></main>
+<footer class="footer">
+  <i>neofonie</i> 2019
+</footer>
 <script src="js/radar.js"></script>
 <script type="module">
-    /**
-     * after reading the js/radar.js, it exists a
-     * global object, called "RADAR".
-     * this object will be overwritten
-     * with the created radar object.
-     * accessible at "window.RADAR"
-     */
+  /**
+   * after reading the js/radar.js, it exists a
+   * global object, called "RADAR".
+   * this object will be overwritten
+   * with the created radar object.
+   * accessible at "window.RADAR"
+   */
 
     // this is the global radar options object
-    const radarOptions = {
-        serverMode: false,
-        protocol: 'http',
-        host: 'localhost',
-        port: 8200,
-        apiVersion: 'v1'
+  const radarOptions = {
+      serverMode: false,
+      protocol: 'http',
+      host: 'localhost',
+      port: 8200,
+      apiVersion: 'v1'
     };
 
-    new RADAR(radarOptions).then(radar => {
-        window.RADAR = radar;
-        console.log('>>> RADAR ACCESSIBLE', 'window.RADAR or RADAR');
+  new RADAR(radarOptions).then(radar => {
+    window.RADAR = radar;
+    console.log('>>> RADAR ACCESSIBLE', 'window.RADAR or RADAR');
 
-        // add events
-        RADAR.on('simulation-complete', () => {
-            console.log('>>> SIMULATION COMPLETE');
-        });
-
-        RADAR.on('mouseover', (e, dot) => {
-            console.log('>>> HOVERING DOT', dot.label);
-        });
+    // add events
+    RADAR.on('simulation-complete', () => {
+      console.log('>>> SIMULATION COMPLETE');
     });
+
+    RADAR.on('mouseover', (e, dot) => {
+      console.log('>>> HOVERING DOT', dot.label);
+    });
+  });
 </script>
 </body>
 </html>
