--- a/public/index.html
+++ b/public/index.html
@@ -2,23 +2,24 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>neofonie tech radar</title>
+  <title>Neofonie Tech Radar</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="preload" href="css/app.css" as="style">
   <link rel="preload" href="css/dark.css" as="style">
   <link rel="preload" href="css/fonts/exo-webfont/Exo-Medium.woff2" as="font">
   <link rel="preload" href="js/radar.js" as="script">
   <link rel="stylesheet" href="css/app.css">
+  <link rel="shortcut icon" type="image/x-icon" href="https://www.neofonie.de/favicon.ico">
 </head>
 <body class="loading">
 <header class="header">
   <div class="company">
-    <a href="https://neofonie.de" target="_blank">neofonie<span class="claim">tech-radar</span></a>
+    <a href="https://www.neofonie.de" target="_blank">Neofonie<span class="claim">Tech Radar</span></a>
   </div>
 </header>
 <main class="content"></main>
 <footer class="footer">
-  <i>neofonie</i> 2019
+  <i>Neofonie</i> 2022
 </footer>
 <script src="js/radar.js"></script>
 <script type="module">
